# RohanNagpureACMHackathon2

./: .gitignore  =1.0.0  CLAUDE.md  PROMPT_user_progression_v1.md  README.md  bug-scan.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.agent/skills/ui-ux-pro-max/: SKILL.md
.agent/skills/ui-ux-pro-max/scripts/: core.py  search.py  (+1 more)
backend/: config.py  main.py  pipeline.py
backend/api/: routes_sessions.py  routes_upload.py  routes_user.py  schemas.py
backend/core/: ai_feedback.py  angle_calculator.py  exercise_configs.py  fatigue_detector.py  feature_extractor.py  form_analyzer.py  gemini_feedback.py  pose_extractor.py  progress_tracker.py  rep_segmenter.py  rom_analyzer.py  tempo_analyzer.py
backend/db/: crud.py  database.py  models.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AICoach.tsx  Dashboard.tsx  DegradationChart.tsx  FatigueAlert.tsx  FormQuality.tsx  PrivacyBanner.tsx  ProgressPage.tsx  RepTable.tsx  SessionList.tsx  UploadForm.tsx  VideoPlayer.tsx
frontend/src/hooks/: useProgressData.ts  useSessionData.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
scripts/: auto_fix.sh  bug_scan.sh  enhance_issues.sh  generate_synthetic_fatigue.py
tests/: conftest.py
tests/e2e/: test_dashboard.spec.ts
tests/integration/: test_api.py  test_db.py
tests/unit/: test_angle_calculator.py  test_exercise_configs.py  test_fatigue_detector.py  test_feature_extractor.py  test_pose_extractor.py  test_rep_segmenter.py
