[project]
name = "air-health"
version = "0.1.0"
description = "Fatigue Detection & Form Degradation Tracking"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-multipart>=0.0.9",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
